network_policy/debug_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  namespace: demo
  labels:
    tier: frontend
    app: debug
spec:
  containers:
  - name: debug
    image: busybox
    command: ['sleep', '3600']
